--- a/config/database.yml
+++ b/config/database.yml
@@ -6,20 +6,46 @@
 #
 default: &default
   adapter: postgresql
+  encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
 development:
   <<: *default
-  database: db/development.postgresql
+  database: myapp_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.postgresql
+  database: myapp_test
 
 production:
   <<: *default
-  database: db/production.postgresql
+  database: myapp_production
+#_________________________________________
+# PostgreSQL. Versions 9.1 and up are supported.
+#
+# default: &default
+#   adapter: postgresql
+#   encoding: unicode
+ 
+#   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+
+# development:
+#   <<: *default
+#   database: myapp_development
+
+ 
+# test:
+#   <<: *default
+#   database: myapp_test
+
+# #
+# production:
+#   <<: *default
+#   database: myapp_production
+#   username: myapp
+#   password: <%= ENV['MYAPP_DATABASE_PASSWORD'] %>
+  
